kustomized/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mastodon-work
  namespace: prod
  resourceVersion: "2365888"
  uid: 28901ccc-ae8c-48b1-920c-1a4dc59012cd
spec:
  ingressClassName: nginx
  rules:
  - host: mastodon.faultycloud.work
    http:
      paths:
      - backend:
          service:
            name: mastodon-web
            port:
              number: 3000
        path: /
        pathType: Prefix
      - backend:
          service:
            name: mastodon-streaming
            port:
              number: 4000
        path: /api/v1/streaming
        pathType: Prefix
  tls:
  - hosts:
    - mastodon.faultycloud.work
    secretName: mastodon-tls
status:
  loadBalancer:
    ingress:
    - ip: 10.0.0.10
